ensure all anchor links are positioned correctly, add spacing to last separator

--- a/app/assets/stylesheets/content/content.scss
+++ b/app/assets/stylesheets/content/content.scss
@@ -6,7 +6,6 @@
   position: relative;
 
   .content {
-    height: 1200px;
     width: 95%;
     max-width: 1280px;
 
@@ -16,6 +15,13 @@
       margin: 0 5%;
 
       overflow: auto;
+
+      .anchor-link {
+        display: block;
+        position: relative;
+        top: -60px;
+        visibility: hidden;
+      }
 
       h1.section-title {
         text-align: center;
@@ -57,6 +63,10 @@
         background-image: image-url('nav/separator_dark.png');
         transition: background-image 0.2s;
       }
+    }
+
+    a.last .section-separator {
+      padding-top: 120px;
     }
   }
 }
